# skillsmp-mcp

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  ANALYSIS_v1.4.1.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIAGRAM.md  FIX_PLAN_v1.4.1.md  LICENSE  PLAN_V2.md  PLAN_V3.md  PLAN_v1.4.md  README.md  SECURITY.md  pyproject.toml  server.py  setup.ps1  setup.sh  skillsmp-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
data/: cache_skillsmp.json  skill_structure.json
docs/: guide.md  mcp.example.json  skill_inventory.csv  skillsmp-quickref.md
scripts/: generate_xlsx.py  install-hooks.ps1  refresh_structure.py  show_all_skills.py
server/: utils.py
skills/skillsmp-checker/: SKILL.md
studio/: analysis_v1.3.md
tests/: test_server.py
