[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillsmp-mcp"
version = "1.0.0"
description = "MCP server per cercare e confrontare skill AI su SkillsMP.com"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "matrixNeo76"},
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[project.scripts]
skillsmp-server = "server:mcp.run"
