[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillsmp-mcp"
version = "1.2.0"
description = "MCP server per cercare, confrontare e verificare skill AI su SkillsMP.com"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["mcp", "skillsmp", "craft-agents", "ai", "skills"]
authors = [
    {name = "matrixNeo76"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/matrixNeo76/skillsmp-mcp"
Repository = "https://github.com/matrixNeo76/skillsmp-mcp.git"
Documentation = "https://github.com/matrixNeo76/skillsmp-mcp/blob/main/docs/guide.md"

[project.scripts]
skillsmp-server = "server:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
